# CompanyResearcher

./: .gitignore  pyproject.toml  test.sh
src/: base_config.py  main.py
src/api/: dependencies.py  main_router.py
src/processors/: sth.ipynb
src/searchers/: base_scraper.py  emulator.py  engines_config.py  scripts.py  test_scripts.py
src/searchers/edgar/: __init__.py  edgar_parser.py  edgar_scraper.py  parser.py  scraper.py
src/searchers/google/: __init__.py  query.py  scraper.py
src/searchers/macrotrends/: __init__.py  macro_parser.py  macro_parser_test.ipynb  macro_scraper.py  scraper.py
src/searchers/nasdaq/: nasdaq_api_scraper.py  nasdaq_article_parser.py  nasdaq_article_scraper.py  nasdaq_parser.py  nasdaq_scraper.py  scraper.py
src/searchers/utils/: __init__.py  base_scraper.py  check_robot_file.py  cik_mapping.json  scripts.py  setups.py  ticker_cik_mapper.py
