[project]
name = "companyresearcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiodns>=3.5.0",
    "aiohttp>=3.12.15",
    "curl-cffi>=0.12.0",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "google-auth>=2.40.3",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "notebook>=7.4.4",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "requests>=2.32.4",
    "selenium>=4.34.2",
    "selenium-driverless>=1.9.4",
    "uvicorn>=0.35.0",
    "uvloop>=0.21.0",
    "yfinance>=0.2.65",
]
